add easyjcckit